Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13769

No way to freeze libraries using qmake/make on symbian

XMLWordPrintable

    • 91e127444f1b217525263b26f44fb566b9067d75

      There is currently no way to freeze APIs of DLLs using the Makefiles generated by the symbian backend of qmake.

      Since this functionality is needed when developing libraries on Symbian devices and since qmake is meant to encapsulate the actual Symbian build system used it should provide a target to freeze APIs.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            hunger Tobias Hunger
            Votes:
            3 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes