Generate freeze targets in Symbian

Make it possible to freeze def files via makefile targets.

Task-number: QTBUG-13769
Reviewed-by: Janne Koskinen